--- a/refs.bib
+++ b/refs.bib
@@ -15,6 +15,17 @@
 	}
 }
 
+@article{yoder2014fixed,
+	title={Fixed-point quantum search with an optimal number of queries},
+	author={Yoder, Theodore J and Low, Guang Hao and Chuang, Isaac L},
+	journal={Physical review letters},
+	volume={113},
+	number={21},
+	pages={210501},
+	year={2014},
+	publisher={APS}
+}
+
 @inproceedings{abadi2016tensorflow,
 	title={$\{$TensorFlow$\}$: A System for $\{$Large-Scale$\}$ Machine Learning},
 	author={Abadi, Mart{\'\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and others},
